--- a/README
+++ b/README
@@ -1,1 +1,15 @@
-A lightweight IDE for Selenium 1 & 2.
+# Se Builder -- A test development environment for Selenium 1 and 2
+
+## Install
+
+Simply click on the latest XPI in the downloads section.
+
+## Open Source
+
+Splash Site - http://sebuilder.com
+Github - http://github.com/admc/se-builder
+Mailing list - https://groups.google.com/d/forum/se-builder
+Issues - https://github.com/admc/se-builder/issues
+License - Apache 2: http://www.apache.org/licenses/LICENSE-2.0
+
+## Thanks!
